# visualloc

./: README.md
visualloc/: README.txt
visualloc/localizer/: CMakeLists.txt
visualloc/localizer/cmake/: FindFLANN.cmake
visualloc/localizer/src/: BundleAdjustCams.cc  BundleAdjustCams.hh  CMakeLists.txt  RANSAC.cc  RANSAC.hh  flann_matcher_reduced_allmatch.cc  flann_matcher_reduced_allmatch.hh  flann_matcher_reduced_allmatch_added.cc  flann_matcher_reduced_allmatch_added.hh  global.hh  kalman.cc  kalman.hh  pose_estimator_subdivided_wqueue_kalman.cc  pose_estimator_subdivided_wqueue_kalman.hh  spatialfunc.cc  spatialfunc.hh  util.cc  util.hh  wqueue.hh
visualloc/localizer/src/features/: ORB_keypoint.hh  ORB_loader.cc  ORB_loader.hh  SIFT_loader.cc
visualloc/localizer/src/math/: pseudorandomnrgen.hh
visualloc/localizer/src/sfm/: parse_bundler.cc  parse_bundler.hh
visualloc/scripts/analysis/: plot_pose_exp.sh  plot_reconstruction_added_quality.sh  process_pose_exp.sh  process_reconstruction_added_quality.sh
visualloc/scripts/bundler/: README.txt  convert_match_for_vsfm.py  get_reconstruction_percentage.sh  produce_sift_keys.sh  run_matcher_bundler_added_interleaved_iphone.sh  run_matcher_bundler_added_interleaved_iphone_fivepoles.sh  run_matcher_bundler_allmatch_iphone.sh  run_matcher_bundler_allmatch_iphone_twopoles.sh  run_matcher_bundler_interleaved_iphone_fivepoles.sh
visualloc/scripts/bundler/util/: get_poles_distance.sh  merge_flann_matches.sh  merge_flann_matches_added.sh
visualloc/scripts/config_files_scripts/: clean.sh  options.txt  options_to_add.txt
visualloc/scripts/plot/: plot_pose_error.sh  process_pose_error.sh
visualloc/scripts/pose/: evaluate.sh  make_video.sh  run_pose_exp.sh  run_pose_subdivided_wqueue_kalman.sh  run_produce_lists.sh
visualloc/scripts/preprocess/: README.txt  combine_log_info.sh  get_movie_frames.sh  preprocess.sh  preprocess_temp.sh
visualloc/scripts/preprocess/util/: generate_interpolated_trace.py
